--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+<link rel='dns-prefetch' href='//use.fontawesome.com' />
+<link rel="dns-prefetch" href="//pro.fontawesome.com" />
+
 <style id='font-awesome-official-v4shim-inline-css' type='text/css'>
 @font-face {
 font-family: "FontAwesome";
